--- a/configuration.properties
+++ b/configuration.properties
@@ -2,3 +2,5 @@ browser=chrome
 username=johndoe
 smartBearUrl=http://secure.smartbearsoftware.com/samples/testcomplete12/WebOrders/login.aspx
 searchValue=liverpool
+smartBear_username=Tester
+smartBear_password=test
